--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+      - name: quickfix
+        run: git config --global --add safe.directory /github/workspace
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.14.1
         env:
