--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,12 @@ on: push
 name: Build and deploy GH Pages
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.ref == 'refs/heads/main'
     steps:
       - name: checkout
         uses: actions/checkout@v2
       - name: build_and_deploy
-        run: git config --global --add safe.directory /github/workspace
         uses: shalzz/zola-deploy-action@v0.14.1
         env:
           # Target branch
